--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -5,3 +5,5 @@
 
 /* imagen destacada */
 #main .container .section .post .featured-picture{width:100%; aspect-ratio:16/9; object-fit:cover;}
+/* título */
+#main .container .section .post .title{margin:44px 0 21px; text-align:center;}
