ajustes al single.css para los artículos

--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -6,7 +6,9 @@
 /* imagen destacada */
 #main .container .section .post .featured-picture{width:100%; aspect-ratio:16/9; object-fit:cover;}
 /* título */
-#main .container .section .post .title{margin:44px 0 21px; text-align:center;}
+#main .container .section .post .title{margin:44px auto 21px; text-align:center;}
 /* autor y fecha de publicación */
 #main .container .section .post .author-and-date{font-size:var(--wp--present--font-size--small); text-align:center;}
 #main .container .section .post .author-and-date span{color:var(--wp--present--color--title);}
+/* citas */
+#main .container .section .post .wp-block-quote{max-width:651px; color:var(--wp--present--color--title);}
