--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -11,4 +11,5 @@
 #main .container .section .post .author-and-date{font-size:var(--wp--present--font-size--small); text-align:center;}
 #main .container .section .post .author-and-date span{color:var(--wp--present--color--title);}
 /* citas */
-#main .container .section .post .wp-block-quote{max-width:651px; color:var(--wp--present--color--title); text-align:center;}
+#main .container .section .post .wp-block-quote{max-width:651px;}
+#main .container .section .post .wp-block-quote p{color:var(--wp--present--color--title); text-align:center;}
