ajustes al single.css para los artículos

--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -1,7 +1,7 @@
 /* generales */
 #main .container{padding-top:68px;}
 #main .container .section .post *:not(.featured-picture){max-width:803px; margin-inline:auto;}
-#main .container .section .post *:not(:last-child){margin-bottom:24px;}
+#main .container .section .post > *:not(:last-child){margin-bottom:24px;}
 
 /* imagen destacada */
 #main .container .section .post .featured-picture{width:100%; aspect-ratio:16/9; object-fit:cover;}
@@ -16,3 +16,4 @@
 /* imágenes */
     /* galería */
     #main .container .section .post .wp-block-gallery{display:grid; grid-template-columns:1fr 1fr;}
+    .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image){width:100%;}
