--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -15,5 +15,6 @@
 #main .container .section .post .wp-block-quote p{color:var(--wp--preset--color--title); text-align:center;}
 /* imágenes */
     /* galería */
+    #main .container .section .post .wp-block-image.size-full{width:100%;}
     #main .container .section .post .wp-block-gallery{display:grid; grid-template-columns:1fr 1fr;}
     .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image){width:100%;}
