--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -1,10 +1,9 @@
 /* generales */
-#main .container .section.post-wrapper{padding-top:68px;}
 #main .container .section .post{padding-bottom:50px; max-width:803px; margin-inline:auto;}
 #main .container .section .post > *:not(:last-child){margin-bottom:24px;}
 
 /* imagen destacada */
-#main .container .section .post-wrapper .featured-picture{width:100%; aspect-ratio:16/9; object-fit:cover; max-width:921.29px; margin-inline:auto;}
+#main .container .section.post-wrapper .featured-picture{width:100%; aspect-ratio:16/9; object-fit:cover; max-width:921.29px; margin-inline:auto;}
 /* título */
 #main .container .section .post .title{margin:44px auto 21px; text-align:center;}
 /* autor y fecha de publicación */
@@ -18,3 +17,8 @@
     #main .container .section .post .wp-block-image.size-full img{width:100%;}
     #main .container .section .post .wp-block-gallery{display:grid; grid-template-columns:1fr 1fr;}
     .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image){width:100%;}
+
+@media(min-width:768px){
+    /* generales */
+    #main .container .section.post-wrapper{padding-top:68px;}
+}
