ajustes al single.css para los artículos

--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -21,4 +21,7 @@
 @media(min-width:768px){
     /* generales */
     #main .container{padding-top:68px;}
+
+    /* imagen destacada */
+#main .container .featured-picture{aspect-ratio:16/9;}
 }
