--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -23,7 +23,8 @@
 /* aside */
 #main .container .section aside .tags-and-share{display:grid; grid-template-columns:1fr auto; gap:10px; align-content:start;}
 #main .container .section aside .tags-and-share .tags{display:inline-flex; flex-wrap:wrap; gap:7px;}
-#main .container .section aside .tags-and-share .tags a{font-size:14px; background-color:var(--wp--preset--color--title); color:#fff; padding:5px 10px; border-radius:5px; transition:all .3s ease;}
+#main .container .section aside .tags-and-share .tags a{position:relative; font-size:14px; background-color:var(--wp--preset--color--title); color:#fff; padding:5px 10px; border-radius:5px; transition:all .3s ease;}
+#main .container .section aside .tags-and-share .tags a:before{content:'#';}
 #main .container .section aside .tags-and-share .tags a:hover{background-color:var(--wp--preset--color--links);}
 
 @media(min-width:768px){
