--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -21,11 +21,17 @@
         .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image){width:100%;}
 
 /* aside */
+/* etiquetas y compartir */
 #main .container .section aside .tags-and-share{display:grid; grid-template-columns:1fr auto; gap:10px; align-content:start;}
-#main .container .section aside .tags-and-share .tags{display:inline-flex; flex-wrap:wrap; gap:7px;}
-#main .container .section aside .tags-and-share .tags a{position:relative; font-size:14px; background-color:var(--wp--preset--color--title); color:#fff; padding:5px 10px; border-radius:16.2px; transition:all .3s ease;}
-#main .container .section aside .tags-and-share .tags a:before{content:'#';}
-#main .container .section aside .tags-and-share .tags a:hover{background-color:var(--wp--preset--color--links);}
+    /* etiquetas */
+    #main .container .section aside .tags-and-share .tags{display:inline-flex; flex-wrap:wrap; gap:7px;}
+    #main .container .section aside .tags-and-share .tags a{position:relative; font-size:14px; background-color:var(--wp--preset--color--title); color:#fff; padding:5px 10px; border-radius:16.2px; transition:all .3s ease;}
+    #main .container .section aside .tags-and-share .tags a:before{content:'#';}
+    #main .container .section aside .tags-and-share .tags a:hover{background-color:var(--wp--preset--color--links);}
+    /* compartir */
+    #main .container .section aside .tags-and-share .share a{color:var(--wp--preset--color--text);}
+    #main .container .section aside .tags-and-share .share a:hover{color:var(--wp--preset--color--title);}
+    #main .container .section aside .tags-and-share .share a:not(:last-child){margin-right:20px;}
 
 @media(min-width:768px){
     /* generales */
