ajustes al single.css para los artículos

--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -39,6 +39,7 @@
     #main .container .section aside .categories .post-categories{display:inline-flex; flex-wrap:wrap; gap:7px;}
     #main .container .section aside .categories .post-categories li{position:relative;}
     #main .container .section aside .categories .post-categories li:not(:last-child):after{content:',';}
+    #main .container .section aside .categories .post-categories li:last-child{content:'.';}
 
 @media(min-width:768px){
     /* generales */
