--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -55,5 +55,5 @@
     #main .container .featured-picture{aspect-ratio:16/9;}
 
     /* paginación */
-    #main .container .single-post-pagination{padding:44px 0; width:min(100% - 60px);}
+    #main .container .single-post-pagination{padding:44px 0; width:min(100% - 60px); margin-inline:auto;}
 }
