--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -44,7 +44,7 @@
     #main .container .section aside .categories .post-categories li:last-child{content:'.';}
 
 /* paginación */
-#main .container.pagination-wrapper{border-top:1px solid #eee;}
+#main .container.pagination-wrapper{border-top:1px solid var(--wp--preset--color--line);}
 #main .container .single-post-pagination{padding:44px 0; width:min(100% - 30px); display:flex; justify-content:space-between;}
 #main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link){display:grid; gap:0 10px; align-items:center;}
 #main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link) svg{color:var(--wp--preset--color--text); grid-row:1/3; width:45px; height:45px;}
@@ -52,6 +52,9 @@
 #main .container .single-post-pagination .right .next-post-link :is(.pagination-indicator, .title-post){text-align:right;}
 #main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link) .pagination-indicator{font-size:var(--wp--preset--font-size--small); color:var(--wp--preset--color--text); grid-row:1/2;}
 #main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link) .title-post{color:var(--wp--preset--color--title); grid-row:2/3;}
+
+/* comentarios */
+#main .container.comments-wrapper{background-color:var(--wp--preset--color--background-comments);}
 
 @media(min-width:768px){
     /* generales */
