ajustes al single.css para los artículos

--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -58,6 +58,7 @@
 #main .container .section.comments-section{width:min(100%, 803px);}
     /* comentarios */
     #comments{font-size:var(--wp--preset--font-size--x-large); text-align:center; padding:68px 0 54px;}
+    .comment-list{list-style:none;}
     /* deja un comentario */
     #respond{padding-top:65px;}
     #reply-title{font-size:var(--wp--preset--font-size--x-large); padding-bottom:3px;}
