--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -59,8 +59,8 @@
     /* comentarios */
     #comments{font-size:var(--wp--preset--font-size--x-large); text-align:center; padding:68px 0 54px;}
     .commentlist{list-style:none;}
-    .commentlist li:not(:first-child){border-top:1px solid var(--wp--preset--color--line-comments);}
-    .commentlist li .comment-body{padding-top:20px; margin-top:29px;}
+    .commentlist li:not(:first-child){border-top:1px solid var(--wp--preset--color--line-comments); margin-top:29px;}
+    .commentlist li .comment-body{padding-top:20px;}
     /* deja un comentario */
     #respond{padding-top:65px;}
     #reply-title{font-size:var(--wp--preset--font-size--x-large); padding-bottom:3px;}
