--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -62,7 +62,7 @@
     .commentlist li:not(:first-child){border-top:1px solid var(--wp--preset--color--line-comments); margin-top:29px;}
     .commentlist li .comment-body{padding-top:20px;}
     .commentlist li .comment-body .comment-metadata{font-size:var(--wp--preset--font-size--small); color:var(--wp--preset--color--text);}
-    .commentlist li .comment-body .comment-content
+    .commentlist li .comment-body .comment-content{padding-top:19px;}
     /* deja un comentario */
     #respond{padding-top:65px;}
     #reply-title{font-size:var(--wp--preset--font-size--x-large); color:var(--wp--preset--color--title); padding-bottom:3px;}
