--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -63,7 +63,7 @@
     .commentlist li .comment-body{padding-top:20px;}
     .commentlist li .comment-body .comment-metadata{font-size:var(--wp--preset--font-size--small);}
     .commentlist li .comment-body .comment-metadata a:where(:not(.wp-element-button)):any-link{color:var(--wp--preset--color--text);}
-    .commentlist li .comment-body .comment-content{padding-top:19px;}
+    .commentlist li .comment-body .comment-content{padding-top:19px; font-size:var(--wp--preset--font-size--small);}
     .commentlist li .comment-body .reply{padding-top:19px;}
     /* deja un comentario */
     #respond{padding-top:65px;}
