ajustes al single.css para los artículos

--- a/assets/css/forms.css
+++ b/assets/css/forms.css
@@ -14,11 +14,11 @@ main input[type=tel],
 main input[type=password],
 main input[type=search],
 main input[type=url],
-textarea{font-family:var(--wp--preset--font-family--system-font); line-height:1.6; outline:none; padding:8px 10px; border:1px solid var(--wp--present--color--border-input);}
+textarea{line-height:1.6; outline:none; padding:8px 10px; border:1px solid var(--wp--preset--color--border-input);}
 main input[type=text]:focus,
 main input[type=email]:focus,
 main input[type=tel]:focus,
 main input[type=password]:focus,
 main input[type=search]:focus,
 main input[type=url]:focus,
-textarea:focus{border-color:var(--wp--present--color--border-input-focus);}
+textarea:focus{border-color:var(--wp--preset--color--border-input-focus);}
