--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -82,6 +82,10 @@
 
     /* paginación */
     #main .container .single-post-pagination{padding:44px 0; width:min(100% - 60px); margin-inline:auto;}
+
+    /* formulario */
+    .comment-form{display:grid; grid-template-columns:1fr 1fr; gap:4rem 0;}
+    .comment-form :is(.comment-notes, .comment-form-comment, .comment-form-url, .comment-form-cookies-consent, .form-submit){grid-column:1/-1;}
 }
 
 @media(min-width:1024px){
