--- a/assets/css/forms.css
+++ b/assets/css/forms.css
@@ -28,3 +28,7 @@ main input[type=password]:focus,
 main input[type=search]:focus,
 main input[type=url]:focus,
 textarea:focus{border-color:var(--wp--preset--color--border-input-focus);}
+
+/* formulario de envio de datos */
+main input[type=submit]{display:inline-block; margin-top:9px; width:auto; min-width:140px; padding:10px; background-color:var(--wp--preset--color--title); color:#fff;}
+main input[type=submit]:hover{filter:brightness(1.1);}
