--- a/assets/css/forms.css
+++ b/assets/css/forms.css
@@ -6,6 +6,7 @@ input, textarea{transition:all .3s ease;}
 .comment-form-author,
 .comment-form-email,
 .comment-form-url{display:grid; gap:5px; margin-bottom:16px;}
+.comment-form-cookies-consent{margin-bottom:16px;}
 
 /* etiquetas de los formularios */
 .comment-form-comment label,
