--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -45,9 +45,9 @@
 
 /* paginación */
 #main .container.pagination-wrapper{border-top:1px solid var(--wp--preset--color--line);}
-#main .container .single-post-pagination{padding:44px 0; width:min(100% - 30px); display:flex; justify-content:space-between;}
+#main .container .single-post-pagination{padding:44px 0; width:100%; margin-inline:auto; display:flex; justify-content:space-between;}
 #main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link){display:grid; gap:0 10px; align-items:center;}
-#main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link) svg{color:var(--wp--preset--color--text); grid-row:1/3; width:45px; height:45px;}
+#main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link) svg{color:var(--wp--preset--color--text); grid-row:1/3; width:45px; height:45px; opacity:.3;}
 #main .container .single-post-pagination .right .next-post-link svg{grid-column:2/3;}
 #main .container .single-post-pagination .right .next-post-link :is(.pagination-indicator, .title-post){text-align:right;}
 #main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link) .pagination-indicator{font-size:var(--wp--preset--font-size--small); color:var(--wp--preset--color--text); grid-row:1/2;}
@@ -81,7 +81,7 @@
     #main .container .featured-picture{aspect-ratio:16/9;}
 
     /* paginación */
-    #main .container .single-post-pagination{padding:44px 0; width:min(100% - 60px); margin-inline:auto;}
+    #main .container .single-post-pagination{padding:44px 0; width:min(100% - 30px); margin-inline:auto;}
 
     /* formulario */
     .comment-form{display:grid; grid-template-columns:1fr 1fr; gap:0 30px;}
@@ -90,5 +90,5 @@
 
 @media(min-width:1024px){
     /* paginación */
-    #main .container .single-post-pagination{width:min(100% - 120px);}
+    #main .container .single-post-pagination{width:min(100% - 90px);}
 }
