ajustes al single.css para los artículos

--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -62,7 +62,7 @@
     .commentlist li:not(:first-child){border-top:1px solid var(--wp--preset--color--line-comments); margin-top:29px;}
     .commentlist li .comment-body{position:relative; padding-top:20px; display:grid; gap:0 21px; grid-template-columns:60px 1fr;}
     .commentlist li .comment-body :is(.comment-meta, .comment-metadata, .comment-content, .reply){grid-column:2/3;}
-    .commentlist li .comment-body .comment-meta .comment-author .avatar{position:absolute; top:0; left:0; border-radius:50%;}
+    .commentlist li .comment-body .comment-meta .comment-author .avatar{position:absolute; top:20px; left:0; border-radius:50%;}
     .commentlist li .comment-body .comment-meta .comment-author .fn,
     .commentlist li .comment-body .comment-meta .comment-author .fn .url{color:var(--wp--preset--color--title); font-weight:400; font-size:18px;}
     .commentlist li .comment-body .comment-meta .comment-author .says{display:none;}
