--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,1 +1,4 @@
-#main .container .section .posts{display:grid; gap:20px; grid-template-columns:repeat(auto-fill, minmax(218px, 1fr));}
+/* rejilla */
+#main .container .section .posts{display:grid; gap:40px; grid-template-columns:repeat(auto-fill, minmax(286px, 1fr));}
+/* posts */
+#main .container .section .posts .post{display:grid; gap:20px;}
