--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -5,3 +5,5 @@
 #main .container .section .posts .post .thumbnail{width:100%; aspect-ratio:3/4; object-fit:cover;}
 #main .container .section .posts .post .publicate-date{position:relative; padding-left:51px; font-size:var(--wp--preset--font-size--small);}
 #main .container .section .posts .post .publicate-date:before{position:absolute; content:''; width:37px; height:1px; top:50%; left:0; background-color:#ccc;}
+#main .container .section .posts .post .permakink{display:inline-flex; gap:7px; align-items:center;}
+#main .container .section .posts .post .permakink svg{width:11px; height:11px;}
