--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,5 +1,8 @@
 /* lista de categorías */
 #main .container .section .categories-list{padding:30px 0; list-style:none;}
+#main .container .section .categories-list li a:not(.active){color:var(--wp--preset--color--text);}
+#main .container .section .categories-list li a:not(.active):hover{color:var(--wp--preset--color--links);}
+
 /* rejilla */
 #main .container .section .posts{display:grid; gap:40px; grid-template-columns:repeat(auto-fill, minmax(286px, 1fr));}
     /* posts */
