--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,5 +1,5 @@
 /* lista de categorías */
-#main .container .section .categories-list{padding:30px 0; list-style:none;}
+#main .container .section .categories-list{padding:30px 0; list-style:none; width:100%;}
 #main .container .section .categories-list li a:not(.active){color:var(--wp--preset--color--text);}
 #main .container .section .categories-list li a:not(.active):hover{color:var(--wp--preset--color--links);}
 
