--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -4,7 +4,7 @@
 #main .container .section .categories-list li a:not(.active):hover{color:var(--wp--preset--color--links);}
 
 /* rejilla */
-#main .container .section .posts{display:grid; gap:40px; grid-template-columns:repeat(auto-fill, minmax(286px, 1fr));}
+#main .container .section .posts{display:grid; gap:40px; grid-template-columns:repeat(auto-fill, minmax(286px, 1fr)); padding-left:0;}
     /* posts */
     #main .container .section .posts .post{display:grid; gap:14px; align-content:flex-start;}
     #main .container .section .posts .post .thumbnail{width:100%; aspect-ratio:3/4; object-fit:cover;}
