--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -12,6 +12,7 @@
     #main .container .section .posts .post .publicate-date{position:relative; padding-left:51px; font-size:var(--wp--preset--font-size--small);}
     #main .container .section .posts .post .publicate-date:before{position:absolute; content:''; width:37px; height:1px; top:50%; left:0; background-color:#ccc;}
     #main .container .section .posts .post .permalink{display:inline-flex; gap:7px; align-items:center;}
+    #main .container .section .posts .post .permalink:hover{color:var(--wp--preset--color--title);}
     #main .container .section .posts .post .permalink svg{width:12px; height:12px;}
 
 @media(min-width:768px){
