--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -8,10 +8,8 @@
     /* posts */
     #main .container .section .posts .post{display:grid; gap:14px; align-content:flex-start;}
     #main .container .section .posts .post .permalink-thumbnail{position:relative;}
-    #main .container .section .posts .post :is(.permalink-thumbnail:before, .permalink-thumbnail:after){content:''; position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); background-color:transparent; z-index:1; transition:all .3s ease;}
-    #main .container .section .posts .post .permalink-thumbnail:before{width:1px; height:50px;}
-    #main .container .section .posts .post .permalink-thumbnail:after{width:50px; height:1px;}
-    #main .container .section .posts .post :is(.permalink-thumbnail:hover:before, .permalink-thumbnail:hover:after){background-color:#DC9814;}
+    #main .container .section .posts .post .permalink-thumbnail:before{content:''; position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); width:1px; height:50px; background-color:transparent; z-index:1; transition:all .3s ease;}
+    #main .container .section .posts .post .permalink-thumbnail:hover:before{background-color:#DC9814;}
     #main .container .section .posts .post .thumbnail{width:100%; aspect-ratio:3/4; object-fit:cover; transition:all .3s ease;}
     #main .container .section .posts .post .thumbnail:hover{filter:brightness(.3);}
     #main .container .section .posts .post .publicate-date{position:relative; padding-left:51px; font-size:var(--wp--preset--font-size--small);}
