--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -10,6 +10,8 @@
     #main .container .section .posts .post .permalink-thumbnail{position:relative;}
     #main .container .section .posts .post .permalink-thumbnail:before{content:''; position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); width:1px; height:50px; background-color:transparent; z-index:1; transition:all .3s ease;}
     #main .container .section .posts .post .permalink-thumbnail:hover:before{background-color:#DC9814;}
+    #main .container .section .posts .post .permalink-thumbnail:after{content:''; position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); width:50px; height:1px; background-color:transparent; z-index:1; transition:all .3s ease;}
+    #main .container .section .posts .post .permalink-thumbnail:hover:after{background-color:#DC9814;}
     #main .container .section .posts .post .thumbnail{width:100%; aspect-ratio:3/4; object-fit:cover; transition:all .3s ease;}
     #main .container .section .posts .post .thumbnail:hover{filter:brightness(.3);}
     #main .container .section .posts .post .publicate-date{position:relative; padding-left:51px; font-size:var(--wp--preset--font-size--small);}
