--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -17,8 +17,8 @@
     #main .container .section .post .wp-block-quote p{color:var(--wp--preset--color--title); text-align:center;}
     /* imágenes */
         /* galería */
-        #main .container .section .post .wp-block-image.size-full img{width:100%;}
-        #main .container .section .post .wp-block-gallery{display:grid; grid-template-columns:1fr 1fr;}
+        /* #main .container .section .post .wp-block-image.size-full img{width:100%;}
+        #main .container .section .post .wp-block-gallery{display:grid; grid-template-columns:1fr 1fr;} */
         #main .container .section .post .wp-block-gallery .wp-block-image{position:relative;}
         #main .container .section .post .wp-block-gallery .wp-block-image:before{content:''; position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); width:1px; height:50px; background-color:transparent; z-index:1; transition:all .3s ease;}
         #main .container .section .post .wp-block-gallery .wp-block-image:hover:before{background-color:#DC9814;}
@@ -26,9 +26,9 @@
         #main .container .section .post .wp-block-gallery .wp-block-image:hover:after{background-color:#DC9814;}
         #main .container .section .post .wp-block-gallery .wp-block-image img{transition:all .3s ease;}
         #main .container .section .post .wp-block-gallery .wp-block-image img:hover{filter:brightness(.3);}
-        .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image),
+        /* .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image),
         .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image):first-child:nth-last-child(2), 
-        .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image):first-child:nth-last-child(2)~figure.wp-block-image:not(#individual-image){width:100%;}
+        .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image):first-child:nth-last-child(2)~figure.wp-block-image:not(#individual-image){width:100%;} */
 
 /* aside */
 #main .container .section aside{display:grid; gap:15px;}
